Fix vertical alignment

--- a/app/jvm/src/main/assets/stylesheets/main.less
+++ b/app/jvm/src/main/assets/stylesheets/main.less
@@ -214,6 +214,7 @@ ul.mobile-task-editor {
         background-color: transparent;
         border: none;
         resize: none;
+        padding-top: 0px;
       }
     }
   }
